edited log to have buttons. dark mode has bug where it won't stay after changing pages

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,6 +6,7 @@
 html{
     height: 100%;
 }
+
 body{
     background-color: maroon;
     height: auto;
@@ -39,4 +40,18 @@ img {
     width: 100%;
     text-align: center;
 }
+
+button:hover{
+    background-color: rgb(219, 216, 216);
+}
+
+
+.homeButton{
+    background-color: gray;
+    color: white;
+    font-size: 24px;
+    padding: 14px 40px;
+    text-align: center;
+}
+
 
